methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:7: error: reassignment to val
    i = i+1
      ^MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <-0 to 6){
         ^