methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  var i =0
  for (i <-0 to 6){
    while(i<7){
  	avance()
  	i = i+1
  	if(estSurBiscuit()){
      vuBiscuit = true
      recule(i)
      return vuBiscuit
    }
	}
  }
}